# FlowLB

./: .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: OpenGLRenderer.cpp.14E43AE2F74F8F9D.idx  VTUWriter.cpp.4D07CFDA8F0F816A.idx  catch.hpp.4C215BE4F63F934F.idx  context.c.439E465B1DC3CA3E.idx  createGeometry.cpp.601E27C8EB44124B.idx  createGeometry.h.5F0993CEDDED548E.idx  createMesh.cpp.5F23AC300059B688.idx  createMesh.h.4318927DCB5CB005.idx  egl_context.c.5DEC39E4CCAB4AF6.idx  egl_context.h.D18A7E931722B8D9.idx  glad.c.A0B00143E2C08F30.idx  glad.h.5DB8841E714E0BAD.idx  glfw3.h.FCAF0CF9EF5D26D6.idx  glx_context.c.6463D9C180D41686.idx  glx_context.h.A04B119CF6BC47C9.idx  graphics.cu.263B6B515C2D2123.idx  init.c.042235C8B7F1877D.idx  initData.cu.04B83B5C081C664D.idx  initData.cuh.633E76D982CF6690.idx  initData2D.cu.536B9AA1C373D270.idx  initData2D.cuh.9D763128584C16E0.idx  input.c.3DB42A618D41159F.idx  internal.h.E027C26999F51CA1.idx  khrplatform.h.50292EB33CC79481.idx  lbmKernel.cu.2B0E34F9409EEB27.idx  lbmKernel.cuh.526A81CF691E48A6.idx  lbmKernel2D.cu.88BB08D2127231DC.idx  lbmKernel2D.cuh.54302003EB049E87.idx  lean_vtk.cpp.4EC8C14C956445CE.idx  lean_vtk.hpp.C656CA5433C12E70.idx  linux_joystick.c.FC09E3698C5E43B6.idx  linux_joystick.h.86E5986AD55C5D74.idx  main.cpp.235D0B15BDD58809.idx  mappings.h.AB60FDD21883D0CC.idx  monitor.c.5E1FF2064805992C.idx  osmesa_context.c.B113DB8438619FB5.idx  osmesa_context.h.14CDB6CC6D767E39.idx  posix_thread.c.13391BB7246B11CA.idx  posix_thread.h.D3EFC18BB6AD6206.idx  posix_time.c.75DB1CB85EE0703B.idx  (+17 more)
assets/shaders/: arrowInstancing.glsl  lineInstancing.glsl  pointsVelocity.glsl  pointsYVelocity.glsl  text.glsl  textureVelocity2D.glsl  textureXVelocity2D.glsl  textureYVelocity2D.glsl
assets/shaders/freeSurface/: pointsMagnitudeVelocity.glsl  texturePressure2D.glsl  textureXVelocity2D.glsl
assets/shaders/monoFluid/: pointsXVelocity.glsl  textureIsosurface2D.glsl  textureYVelocity2D.glsl
src/: CMakeLists.txt  initData.cpp  initData.h  main.cpp  mainProcesses.cpp  mainProcesses.h  runCalculations.cpp  runCalculations.h  utils.cpp  utils.h
src/cuda/: CMakeLists.txt  cellCalculations.cuh  cudaInitData.cu  cudaInitData.cuh  cudaIsosurface.cu  cudaIsosurface.cuh  cudaUtils.cu  cudaUtils.cuh  cudaUtils.h  graphics.cu  initData.cu  initData.cuh  lbmKernel2D.cu  lbmKernel2D.cuh  runCuda.cu  runCuda.cuh
src/geometry/: CMakeLists.txt  createGeometry.h  createMesh.h  mesh.cpp  mesh.h  shapes.cpp  shapes.h
src/graphics/: API.h  CMakeLists.txt  UUID.cpp  UUID.h  buffer.cpp  buffer.h  camera.cpp  camera.h  cameraController.cpp  cameraController.h  colorMaps.cpp  colorMaps.h  controller.h  font.cpp  frameBuffer.cpp  frameBuffer.h  renderer.cpp  renderer.h  renderer2D.h  rendererAPI.cpp  rendererAPI.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  window.cpp  window.h
src/graphics/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLWindow.cpp  OpenGLWindow.h
src/graphics/scene/: CMakeLists.txt  components.h  componentsMesh.cpp  componentsMesh.h  entity.cpp  entity.h  scene.cpp  scene.h
src/io/: CMakeLists.txt  VTUWriter.h  csvReader.cpp  csvReader.h  reader.cpp  reader.h  writer.cpp  writer.h
src/math/: CMakeLists.txt  math.cpp  math.h
src/ui/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h  app.cpp  app.h  renderLayer.cpp  renderLayer.h  uiUtils.cpp  uiUtils.h
src/ui/panels/: CMakeLists.txt  addPanel.cpp  addPanel.h  hierarchyPanel.cpp  hierarchyPanel.h  settingsPanel.cpp  settingsPanel.h
test/: Geometry.txt  OptionsCalc.txt  a.vti  mesh.vti  mesh.vtu  mesh1.vtu  nacca4412.csv  nacca4412.ods  nacca4412_inv.csv
test/ejemplos/Poiseuille_plano/: .~lock.verificacion_Poiseuille.ods#  Geometry.txt  OptionsCalc.txt  mesh.vti  verificacion_Poiseuille.ods
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/0/: U
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/1/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/10/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/11/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/12/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/13/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/14/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/15/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/16/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/17/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/18/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/19/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/2/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/20/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/21/: U  p  phi
test/ejemplos/Poiseuille_plano/laminar_pipe/case0/22/: U  p  phi
test/ejemplos/cavity/: Geometry.txt  OptionsCalc.txt  mesh.vti
test/ejemplos/cavity/cavity_OpenFOAM/cavity/: estado.pvsm  log.blockMesh  log.icoFoam
test/ejemplos/cavity/cavity_OpenFOAM/cavityClipped/: log.blockMesh  log.icoFoam  log.mapFields
test/ejemplos/cavity/cavity_OpenFOAM/cavityFine/: log.blockMesh  log.icoFoam  log.mapFields
test/ejemplos/cavity/cavity_OpenFOAM/cavityGrade/: log.blockMesh  log.icoFoam  log.mapFields
test/ejemplos/cavity/cavity_OpenFOAM/cavityHighRe/: log.blockMesh  log.icoFoam
test/ejemplos/coche/: Geometry.txt  OptionsCalc.txt  mesh.vti  saleen s7.stl  saleen_s7.csv  saleen_s7.ods
test/ejemplos/damBreak/: Geometry.txt  OptionsCalc.txt  mesh.vti
test/ejemplos/modulos/: Geometry.txt  OptionsCalc.txt
test/ejemplos/pantalon/: Geometry.txt  mesh.vti  pantalon.ods  part1.csv  part2.csv  part3.csv  vertices_pantalon1.xlsx
test/ejemplos/plenum/: Geometry.txt  OptionsCalc.txt  mesh.vti  part1.csv  part2.csv  part3.csv  plenum.csv  plenum.ods
(+255 files in other folders)
